Example-Applications/kubernetes-example-multiple-networks-spaceinvaders/yaml/step-by-step/2-dmz-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: dmz-avi-ingress-class
spec:
  controller: ako.vmware.com/avi-lb
  parameters:
    apiGroup: ako.vmware.com
    kind: AviInfraSetting
    name: dmz-infra-setting #Refer to your AviInfraSetting Object here
