Example-Applications/kubernetes-example-multiple-networks-spaceinvaders/yaml/step-by-step/4-spaceinvaders-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: spaceinvaders-clusterip
  namespace: default
  labels:
    app: spaceinvaders-clusterip
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: spaceinvaders
  type: ClusterIP
